feat[swagger]: map roads
